--- a/client/src/styles/ProfilePage.scss
+++ b/client/src/styles/ProfilePage.scss
@@ -173,3 +173,16 @@ $shadow-in: inset 6px 6px 10px #0b0f19, inset -6px -6px 10px #172135;
     &__btn { width: 100%; }
   }
 }
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 4px solid #111827; // Bakgrundsfärgen
+  border-top-color: #14f4ff; // Din accentfärg
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
